[gd_scene load_steps=13 format=3 uid="uid://n386jdcbvm5m"]

[ext_resource type="Texture2D" uid="uid://c366fispty6kc" path="res://img/controls.png" id="1_gfmhk"]
[ext_resource type="Script" path="res://controls.gd" id="1_qbcre"]
[ext_resource type="Texture2D" uid="uid://c3517vg6s5p64" path="res://img/tutorial.jpeg" id="4_2i6pb"]
[ext_resource type="PackedScene" uid="uid://2r2auob8mpde" path="res://batucada_button.tscn" id="4_42pi2"]
[ext_resource type="PackedScene" uid="uid://bvfci3ptk4mgy" path="res://compasso.tscn" id="5_abkn8"]
[ext_resource type="FontFile" uid="uid://blehhamx1k8f1" path="res://fonts/Prisma.otf" id="6_147p2"]
[ext_resource type="FontFile" uid="uid://cys6dxq8vox8v" path="res://fonts/Prisma.ttf" id="7_r7hve"]
[ext_resource type="PackedScene" uid="uid://kc53kmnctf4c" path="res://tutorial.tscn" id="8_he8l4"]
[ext_resource type="PackedScene" uid="uid://hvfgktj3o36l" path="res://mp_3_loader.tscn" id="9_kpabq"]
[ext_resource type="Texture2D" uid="uid://l857iwqsuyp4" path="res://img/metronome.png" id="10_7f7w8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_h38pn"]
atlas = ExtResource("4_2i6pb")
region = Rect2(0, 0, 1600, 900)

[sub_resource type="SpriteFrames" id="SpriteFrames_qytev"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h38pn")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Controls" type="Node2D"]
script = ExtResource("1_qbcre")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1924.0
offset_bottom = 1082.0
texture = ExtResource("1_gfmhk")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(906, 502)
scale = Vector2(0.685, 0.706667)
sprite_frames = SubResource("SpriteFrames_qytev")

[node name="W" parent="." instance=ExtResource("4_42pi2")]
position = Vector2(19, 675)

[node name="A" parent="." instance=ExtResource("4_42pi2")]
position = Vector2(19, 808)

[node name="O" parent="." instance=ExtResource("4_42pi2")]
position = Vector2(1713, 670)

[node name="L" parent="." instance=ExtResource("4_42pi2")]
position = Vector2(1717, 799)

[node name="Compasso" parent="." instance=ExtResource("5_abkn8")]
position = Vector2(15, 40)

[node name="Pontuacao" type="Label" parent="."]
offset_left = 584.0
offset_top = 848.0
offset_right = 1202.0
offset_bottom = 964.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_147p2")
theme_override_font_sizes/font_size = 100
text = "Pontuação"

[node name="Label" type="Label" parent="."]
offset_left = 1210.0
offset_top = 803.0
offset_right = 1449.0
offset_bottom = 942.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_r7hve")
theme_override_font_sizes/font_size = 100
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Tutorial" parent="." instance=ExtResource("8_he8l4")]

[node name="AudioLoader" parent="." instance=ExtResource("9_kpabq")]

[node name="MetronomoLoader" parent="." instance=ExtResource("9_kpabq")]

[node name="Metronomo" type="TextureButton" parent="."]
offset_left = 371.0
offset_top = 828.0
offset_right = 551.0
offset_bottom = 1008.0
texture_normal = ExtResource("10_7f7w8")

[connection signal="pressed" from="W" to="." method="_on_a_pressed"]
[connection signal="pressed" from="A" to="." method="_on_b_pressed"]
[connection signal="pressed" from="O" to="." method="_on_c_pressed"]
[connection signal="pressed" from="L" to="." method="_on_d_pressed"]
[connection signal="ended" from="Compasso" to="." method="_on_compasso_ended"]
[connection signal="seta_moved" from="Compasso" to="." method="_on_compasso_seta_moved"]
[connection signal="ended" from="Tutorial" to="." method="_on_tutorial_ended"]
[connection signal="finished" from="AudioLoader" to="." method="_on_mp_3_loader_finished"]
[connection signal="finished" from="MetronomoLoader" to="." method="_on_metronomo_loader_finished"]
[connection signal="pressed" from="Metronomo" to="." method="_on_metronomo_pressed"]
